Mejora de login de gerente-vendedor, reportes